fix(local-nav): hide dividers when collapsed

--- a/src/components/global/localNav/localNavDivider.scss
+++ b/src/components/global/localNav/localNavDivider.scss
@@ -6,13 +6,17 @@
 }
 
 .divider {
+  display: none;
   border-bottom: 1px solid var(--kd-color-border-light);
   margin: 4px 0;
+
+  &.nav-expanded {
+    display: block;
+  }
 }
 
 .heading {
   @include typography.type-ui-03;
-  display: none;
   color: var(--kd-color-text-tertiary-bold);
   font-weight: 500;
   text-transform: uppercase;
@@ -20,8 +24,4 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-
-  .nav-expanded & {
-    display: block;
-  }
 }
